[package]
name = "ggl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.15"
structopt = "0.3"
time = "0.1.39"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
chrono = "0.4.23"
colored = "2"
dirs = "2.0.1"
