[package]
name = "ggl"
description = "global git log"
version = "0.2.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/honza/ggl"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.15"
structopt = "0.3"
time = { version = "0.3.17", features = ["serde", "formatting", "serde-human-readable", "local-offset", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
colored = "2"
dirs = "2.0.1"
